--- a/Sharp7.Monitor/Sharp7.Monitor.csproj
+++ b/Sharp7.Monitor/Sharp7.Monitor.csproj
@@ -2,10 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <AssemblyName>s7mon</AssemblyName>
+
+    <PublishSingleFile>true</PublishSingleFile>
+
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>s7mon</AssemblyName>
+
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
