--- a/Sharp7.Monitor/Sharp7.Monitor.csproj
+++ b/Sharp7.Monitor/Sharp7.Monitor.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.49.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.49.0" />
-    <PackageReference Include="Sharp7.Rx" Version="2.0.9-prerelease" />
+    <PackageReference Include="Sharp7.Rx" Version="2.0.16" />
     <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
   </ItemGroup>
 
